--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
-<head>
-    <title>Sample "Hello, World" Application</title>
-  </head>
-  <body bgcolor=white>
-	<p>	test</p>
-     </body>
+	<head>
+    		<title>klirren</title>
+  	</head>
+  	<body>
+		<ul>
+			<li><a href="#"> Video </a></li>
+			<li><a href="#"> Images </a></li>
+			<li><a href="#"> Sound </a></li>
+			<li><a href="#"> About </a></li>
+			<li><a href="#"> Contact </a></li>
+		</ul>
+     	</body>
 </html>
