--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="stylesheet.css">
     		<title>klirren</title>
   	</head>
   	<body>
