--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 			<li><a href="#"> Video </a></li>
 			<li><a href="#"> Images </a></li>
 			<li><a href="#"> Sound </a></li>
-			<li><a href="#"> About </a></li>
-			<li><a href="#"> Contact </a></li>
+			<li><a href="#"> Installations </a></li>
+			<li><a href="about.html"> About </a></li>
+			<li><a href="contact.html"> Contact </a></li>
 		</ul>
      	</body>
 </html>
