--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			<li><a href="#"> Video </a></li>
 			<li><a href="#"> Images </a></li>
 			<li><a href="#"> Sound </a></li>
-			<li><a href="#"> Installations </a></li>
+			<li><a href="installations.html"> Installations </a></li>
 			<li><a href="about.html"> About </a></li>
 			<li><a href="contact.html"> Contact </a></li>
 		</ul>
